--- a/Skywatcher.ui
+++ b/Skywatcher.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>466</width>
-    <height>523</height>
+    <width>464</width>
+    <height>444</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -15,6 +15,18 @@
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>464</width>
+    <height>444</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>464</width>
+    <height>444</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Setup Skywatcher</string>
@@ -138,7 +150,7 @@ p, li { white-space: pre-wrap; }
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>83</y>
+        <y>80</y>
         <width>415</width>
         <height>191</height>
        </rect>
@@ -155,9 +167,9 @@ p, li { white-space: pre-wrap; }
       <widget class="QPushButton" name="pushButton">
        <property name="geometry">
         <rect>
-         <x>40</x>
+         <x>10</x>
          <y>80</y>
-         <width>141</width>
+         <width>201</width>
          <height>23</height>
         </rect>
        </property>
@@ -177,10 +189,10 @@ p, li { white-space: pre-wrap; }
       <widget class="QPushButton" name="pushButton_2">
        <property name="geometry">
         <rect>
-         <x>240</x>
-         <y>20</y>
-         <width>141</width>
-         <height>91</height>
+         <x>220</x>
+         <y>40</y>
+         <width>191</width>
+         <height>71</height>
         </rect>
        </property>
        <property name="toolTip">
@@ -194,9 +206,9 @@ Requires home position to have been set previously.</string>
       <widget class="QComboBox" name="comboBox">
        <property name="geometry">
         <rect>
-         <x>40</x>
+         <x>10</x>
          <y>50</y>
-         <width>141</width>
+         <width>191</width>
          <height>22</height>
         </rect>
        </property>
@@ -207,9 +219,9 @@ Requires home position to have been set previously.</string>
       <widget class="QLabel" name="label">
        <property name="geometry">
         <rect>
-         <x>40</x>
-         <y>20</y>
-         <width>161</width>
+         <x>20</x>
+         <y>30</y>
+         <width>201</width>
          <height>16</height>
         </rect>
        </property>
@@ -336,10 +348,10 @@ p, li { white-space: pre-wrap; }
       <widget class="QLabel" name="label_5">
        <property name="geometry">
         <rect>
-         <x>110</x>
+         <x>100</x>
          <y>33</y>
-         <width>47</width>
-         <height>13</height>
+         <width>71</width>
+         <height>16</height>
         </rect>
        </property>
        <property name="text">
