--- a/Skywatcher.ui
+++ b/Skywatcher.ui
@@ -2,12 +2,15 @@
 <ui version="4.0">
  <class>X2Mount</class>
  <widget class="QDialog" name="X2Mount">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>464</width>
-    <height>344</height>
+    <height>500</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +22,13 @@
   <property name="minimumSize">
    <size>
     <width>464</width>
-    <height>344</height>
+    <height>500</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>464</width>
-    <height>344</height>
+    <height>500</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -81,9 +84,9 @@
      <widget class="QGroupBox" name="groupBox_4">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>8</x>
         <y>0</y>
-        <width>420</width>
+        <width>424</width>
         <height>191</height>
        </rect>
       </property>
@@ -99,9 +102,9 @@
       <widget class="QPushButton" name="pushButton">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>80</y>
-         <width>180</width>
+         <x>16</x>
+         <y>88</y>
+         <width>192</width>
          <height>30</height>
         </rect>
        </property>
@@ -121,10 +124,10 @@ p, li { white-space: pre-wrap; }
       <widget class="QPushButton" name="pushButton_2">
        <property name="geometry">
         <rect>
-         <x>210</x>
-         <y>30</y>
-         <width>200</width>
-         <height>70</height>
+         <x>216</x>
+         <y>56</y>
+         <width>192</width>
+         <height>64</height>
         </rect>
        </property>
        <property name="toolTip">
@@ -138,23 +141,23 @@ Requires home position to have been set previously.</string>
       <widget class="QComboBox" name="comboBox">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>50</y>
-         <width>180</width>
-         <height>22</height>
+         <x>16</x>
+         <y>56</y>
+         <width>192</width>
+         <height>24</height>
         </rect>
        </property>
        <property name="toolTip">
-        <string>Choose 3,6,9,12 o'clock as home location of scope. Use slew tools to move the RA axis so that the polaris bubble is in this location, and the DEC axis so that the hole in the DEC axis allows the polar scope a clear view of the sky (either due east or due west, whichever is best for your set up).</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;justify&quot;&gt;Choose 3,6,9,12 o'clock as home location of scope. Use slew tools to move the RA axis so that the polaris bubble is in this location, and the DEC axis so that the hole in the DEC axis allows the polar scope a clear view of the sky (either due east or due west, whichever is best for your set up).&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
       <widget class="QLabel" name="label">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>30</y>
-         <width>190</width>
-         <height>16</height>
+         <x>16</x>
+         <y>24</y>
+         <width>216</width>
+         <height>24</height>
         </rect>
        </property>
        <property name="text">
@@ -164,9 +167,9 @@ Requires home position to have been set previously.</string>
       <widget class="QLabel" name="label_2">
        <property name="geometry">
         <rect>
-         <x>190</x>
+         <x>224</x>
          <y>120</y>
-         <width>221</width>
+         <width>176</width>
          <height>51</height>
         </rect>
        </property>
@@ -182,10 +185,10 @@ p, li { white-space: pre-wrap; }
       <widget class="QLabel" name="label_3">
        <property name="geometry">
         <rect>
-         <x>10</x>
+         <x>16</x>
          <y>120</y>
-         <width>47</width>
-         <height>13</height>
+         <width>48</width>
+         <height>16</height>
         </rect>
        </property>
        <property name="text">
@@ -209,10 +212,10 @@ p, li { white-space: pre-wrap; }
      <widget class="QPushButton" name="pushButtonOK">
       <property name="geometry">
        <rect>
-        <x>257</x>
-        <y>280</y>
-        <width>81</width>
-        <height>32</height>
+        <x>264</x>
+        <y>440</y>
+        <width>80</width>
+        <height>24</height>
        </rect>
       </property>
       <property name="text">
@@ -222,10 +225,10 @@ p, li { white-space: pre-wrap; }
      <widget class="QPushButton" name="pushButtonCancel">
       <property name="geometry">
        <rect>
-        <x>340</x>
-        <y>280</y>
-        <width>81</width>
-        <height>32</height>
+        <x>352</x>
+        <y>440</y>
+        <width>80</width>
+        <height>24</height>
        </rect>
       </property>
       <property name="text">
@@ -235,7 +238,7 @@ p, li { white-space: pre-wrap; }
      <widget class="QGroupBox" name="groupBox_2">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>8</x>
         <y>200</y>
         <width>191</width>
         <height>71</height>
@@ -248,7 +251,7 @@ p, li { white-space: pre-wrap; }
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>30</y>
+         <y>32</y>
          <width>170</width>
          <height>22</height>
         </rect>
@@ -258,7 +261,7 @@ p, li { white-space: pre-wrap; }
      <widget class="QGroupBox" name="groupBox_3">
       <property name="geometry">
        <rect>
-        <x>230</x>
+        <x>232</x>
         <y>200</y>
         <width>200</width>
         <height>71</height>
@@ -271,7 +274,7 @@ p, li { white-space: pre-wrap; }
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>30</y>
+         <y>32</y>
          <width>80</width>
          <height>22</height>
         </rect>
@@ -287,13 +290,205 @@ p, li { white-space: pre-wrap; }
        <property name="geometry">
         <rect>
          <x>110</x>
-         <y>33</y>
+         <y>32</y>
          <width>60</width>
-         <height>20</height>
+         <height>22</height>
         </rect>
        </property>
        <property name="text">
         <string>Seconds</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="groupBox_5">
+      <property name="geometry">
+       <rect>
+        <x>8</x>
+        <y>280</y>
+        <width>424</width>
+        <height>152</height>
+       </rect>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>9999</width>
+        <height>9999</height>
+       </size>
+      </property>
+      <property name="title">
+       <string>Slew Limits</string>
+      </property>
+      <widget class="QWidget" name="formLayoutWidget">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>200</width>
+         <height>85</height>
+        </rect>
+       </property>
+       <layout class="QFormLayout" name="formLayout">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_7">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Sets limit of mount slewing when the OTA is east of the meridian. If negative, indicates that the mount can go slightly into the weights up position.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="text">
+           <string>East Limit</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QDoubleSpinBox" name="doubleSpinBox">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Sets limit of mount slewing when the OTA is east of the meridian. If negative, indicates that the mount can go slightly into the weights up position.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="minimum">
+           <double>-2.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>2.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>0.100000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_6">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Sets limit of mount slewing when the OTA is west of the meridian - how far can the mount track beyond the merdian. If positive, indicates that the mount can go slightly into the weights up position. The West Limit must be greater than or equal to the East Limit.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="text">
+           <string>West Limit</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_8">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;When does the mount peform a flip if asked to slew near the merdian? Usually set to be the same as the eastern limit, and must be between the eastern and western limits.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="text">
+           <string>Flip Hour Angle</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QDoubleSpinBox" name="doubleSpinBox_3">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;When does the mount peform a flip if asked to slew near the merdian? Usually set to be the same as the eastern limit, and must be between the eastern and western limits.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="minimum">
+           <double>-2.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>2.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>0.100000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QDoubleSpinBox" name="doubleSpinBox_2">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Sets limit of mount slewing when the OTA is west of the meridian - how far can the mount track beyond the merdian. If positive, indicates that the mount can go slightly into the weights up position. The West Limit must be greater than or equal to the East Limit.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="minimum">
+           <double>-2.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>2.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>0.100000000000000</double>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QLabel" name="label_9">
+       <property name="geometry">
+        <rect>
+         <x>232</x>
+         <y>72</y>
+         <width>64</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="toolTip">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Sets limit of mount slewing to east of meridian - used to move mount east of meridian to avoid having to complete a meridian flip like the paramount.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="text">
+        <string>Hours</string>
+       </property>
+      </widget>
+      <widget class="QWidget" name="formLayoutWidget_2">
+       <property name="geometry">
+        <rect>
+         <x>232</x>
+         <y>30</y>
+         <width>176</width>
+         <height>32</height>
+        </rect>
+       </property>
+       <layout class="QFormLayout" name="formLayout_2">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_10">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Sets tracking limit for horizon - stops tracking when the scope is this far above the horizon and setting.&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="text">
+           <string>Horizon Limit</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QDoubleSpinBox" name="doubleSpinBox_4">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Sets tracking limit for horizon - stops tracking when the scope is this far above the horizon and setting.&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="minimum">
+           <double>-90.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>90.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>5.000000000000000</double>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QLabel" name="label_11">
+       <property name="geometry">
+        <rect>
+         <x>328</x>
+         <y>72</y>
+         <width>64</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="toolTip">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Sets limit of mount slewing to east of meridian - used to move mount east of meridian to avoid having to complete a meridian flip like the paramount.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="text">
+        <string>Degrees</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_12">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>120</y>
+         <width>401</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>TextLabel</string>
        </property>
       </widget>
      </widget>
